libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-tuple-has-type.jsonc
//@ run: fail
//@ description: tuple type expression that has a type annotation is invalid
[
  "::kernel::special_form::type",
  "x",
  {
    "#tuple": ["Integer"],
    "#type": "(Integer)"
    //~^ ERROR type annotations are not allowed inside a type expression
  },
  { "#literal": 1 }
]
